# GameOfLifeTddKata

./: CMakeLists.txt  implementation.cpp  implementation.hpp  test.cpp
include/gameOfLife/: Board.hpp  CellState.hpp  Coordinates.hpp  Game.hpp  World.hpp  implementation.hpp
src/: Board.cpp  BoardTests.cpp  Game.cpp  GameTests.cpp  implementation.cpp  main.cpp  test.cpp
